--- a/Construindo um Data Lake/pyproject.toml
+++ b/Construindo um Data Lake/pyproject.toml
@@ -14,6 +14,9 @@ boto3 = "^1.35.19"
 pandas = "^2.2.2"
 
 
+[tool.poetry.group.dev.dependencies]
+mkdocs = "^1.6.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
